---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: ????
  Changes:
    - Add settings to ignore collision checks.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2020-11-28
  Changes:
    - Make re-blacklisting entities less spammy.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2020-11-25
  Changes:
    - Code cleanup and optimizations.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-10-10
  Bugfixes:
    - Make sure to actually require the interface. #10
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-09-22
  Features:
    - Oblong pumps can now be rotated.
  Changes:
    - Removed rotate ghost since ghosts can't be rotated.
    - Players with cheat_mode enabled can move more things including from different forces.
    - Players with cheat_mode enabled bypass any can_reach checks.
    - Blacklist interface now also writes to log when not silent.
  Bugfixes:
    - Fixed (hopefully) wire distance for circuit connectables.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-08-02
  Bugfixes:
    - Fix for building grid changes. Maybe Possibly.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-03-19
  Changes:
    - Remove Picker Atheneum Hard Dependency.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ??????
  Features:
    - Update to Factorio 0.18.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ??????